--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SASSS</title>
+    <meta name="description" content="En la tienda Online de Trademark, encontra todos los productos xxxxx que estas buscando en un solo lugar">
+    <title>TRADEMARK - INICIO</title>
     
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&family=Oswald:wght@200&display=swap" rel="stylesheet">
 
