--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Contactanos a traves de estos medios por cualquier duda que tengas en nuestra tienda  online - Trademark siempre cerca">
     <title>Contacto - Trademark</title>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&family=Oswald:wght@200&display=swap" rel="stylesheet">
    
